--- a/portfolio.html
+++ b/portfolio.html
@@ -9,103 +9,102 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@500;700;800&display=swap" rel="stylesheet">
     <script>
         tailwind.config = {
-            theme: { extend: { colors: { primary: '#EF4444', dark: '#111827', accent: '#1F2937' }, fontFamily: { sans: ['Open Sans'], heading: ['Poppins'] } } }
+            theme: {
+                extend: {
+                    colors: { primary: '#EF4444', dark: '#0B0F19', accent: '#161E2E' },
+                    fontFamily: { sans: ['Open Sans'], heading: ['Poppins'] },
+                    boxShadow: {
+                        'glow-sm': '0 0 15px -3px rgba(239, 68, 68, 0.3)',
+                        'glow-md': '0 0 25px -5px rgba(239, 68, 68, 0.5)',
+                    },
+                    backgroundImage: { 'main-gradient': 'radial-gradient(circle at top right, rgba(239, 68, 68, 0.1) 0%, transparent 40%), radial-gradient(circle at bottom left, rgba(30, 58, 138, 0.1) 0%, transparent 40%)' }
+                }
+            }
         }
     </script>
+    <style>
+        .glass-box { background: rgba(22, 30, 46, 0.6); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.05); }
+    </style>
 </head>
-<body class="bg-dark text-gray-300 font-sans">
+<body class="bg-dark bg-main-gradient text-gray-300 font-sans min-h-screen">
     
-    <nav class="fixed w-full z-50 bg-dark/90 backdrop-blur-md border-b border-gray-800 py-4">
+    <nav class="fixed w-full z-50 bg-dark/70 backdrop-blur-xl border-b border-primary/20 py-4 shadow-glow-sm">
         <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
-            <a href="index.html" class="text-white hover:text-primary transition font-bold"><i class="fas fa-arrow-left mr-2"></i> Back to Home</a>
-            <span class="text-primary font-heading font-bold">Portfolio Gallery</span>
+            <a href="index.html" class="text-white hover:text-primary transition font-bold flex items-center gap-2 group">
+                <i class="fas fa-arrow-left group-hover:-translate-x-1 transition"></i> Back to Home
+            </a>
+            <span class="text-primary font-heading font-bold text-xl drop-shadow-[0_0_8px_rgba(239,68,68,0.6)]">Portfolio Gallery</span>
         </div>
     </nav>
 
-    <section class="pt-32 pb-20">
-        <div class="max-w-7xl mx-auto px-4">
-            <div class="text-center mb-16">
-                <h1 class="text-4xl font-heading font-bold text-white">My <span class="text-primary">Creation</span></h1>
-                <p class="text-gray-500 mt-2">Jelajahi proyek-proyek yang telah saya bangun dengan penuh dedikasi.</p>
+    <section class="pt-36 pb-20">
+        <div class="max-w-7xl mx-auto px-4 relative z-10">
+            <div class="text-center mb-20 relative">
+                 <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-64 h-64 bg-primary/20 rounded-full blur-[100px] -z-10"></div>
+                <h1 class="text-4xl md:text-5xl font-heading font-bold text-white mb-4 tracking-tight">
+                    My <span class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-red-400 drop-shadow-[0_0_15px_rgba(239,68,68,0.5)]">Creations</span>
+                </h1>
+                <p class="text-gray-400 mt-2 text-lg max-w-2xl mx-auto glass-box p-4 rounded-xl inline-block border border-primary/20">Jelajahi proyek-proyek yang telah saya bangun dengan penuh dedikasi dan inovasi.</p>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 
-                <div class="bg-accent rounded-xl overflow-hidden shadow-xl border-2 border-primary transform hover:-translate-y-2 transition duration-300 relative">
-                    <div class="relative">
-                        <img src="https://via.placeholder.com/600x400/111111/EF4444?text=Mapple+Project" class="w-full h-48 object-cover">
-                        <div class="absolute top-0 left-0 bg-primary text-white text-xs font-bold px-3 py-2 rounded-br-lg z-10">
-                            <i class="fas fa-thumbtack mr-1"></i> PROJEK UNGGULAN
+                <div class="glass-box rounded-2xl overflow-hidden shadow-glow-md border-2 border-primary/60 transform hover:-translate-y-3 transition-all duration-500 group relative h-full flex flex-col">
+                    <div class="absolute inset-0 bg-gradient-to-br from-primary/20 via-transparent to-purple-900/20 opacity-50 group-hover:opacity-100 transition duration-700 animate-pulse -z-10"></div>
+
+                    <div class="relative h-56 overflow-hidden">
+                        <img src="https://via.placeholder.com/600x400/111111/EF4444?text=Mapple+Project" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-700">
+                        <div class="absolute inset-0 bg-gradient-to-t from-dark via-transparent to-transparent opacity-80"></div>
+                        <div class="absolute top-4 left-4 bg-gradient-to-r from-primary to-red-700 text-white text-xs font-bold px-4 py-1.5 rounded-full shadow-[0_0_15px_rgba(239,68,68,0.8)] z-20 flex items-center gap-2 border border-red-400">
+                            <i class="fas fa-thumbtack animate-bounce"></i> PROJEK UNGGULAN
                         </div>
                     </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-heading font-bold text-white mb-2">Mapple Project ID</h3>
-                        <p class="text-gray-400 text-sm mb-4 line-clamp-3">
-                            Ekosistem komunitas Minecraft terbesar. Website terintegrasi untuk store, ban-list, dan statistik player secara realtime.
+                    <div class="p-7 flex flex-col flex-grow relative">
+                        <h3 class="text-2xl font-heading font-bold text-white mb-3 group-hover:text-primary transition drop-shadow-sm">Mapple Project ID</h3>
+                        <p class="text-gray-400 text-sm mb-6 line-clamp-3 flex-grow leading-relaxed">
+                            Ekosistem komunitas Minecraft terbesar. Website terintegrasi real-time untuk store, ban-list, dan statistik player menggunakan API kustom.
                         </p>
-                        <div class="flex flex-wrap gap-2 mb-6">
-                            <span class="px-2 py-1 bg-gray-800 text-xs rounded text-gray-300">Minecraft</span>
-                            <span class="px-2 py-1 bg-gray-800 text-xs rounded text-gray-300">Fullstack</span>
+                        <div class="flex flex-wrap gap-2 mb-8">
+                            <span class="px-3 py-1 bg-dark/50 border border-primary/30 text-xs rounded-full text-primary font-bold shadow-glow-sm">Minecraft</span>
+                            <span class="px-3 py-1 bg-dark/50 border border-white/10 text-xs rounded-full text-gray-300">Fullstack</span>
                         </div>
-                        <div class="flex gap-3">
-                            <a href="#" class="flex-1 text-center bg-primary text-white py-2 rounded font-bold text-sm hover:bg-red-600 transition">Visit Site</a>
-                            <a href="#" class="flex-1 text-center border border-gray-600 text-gray-300 py-2 rounded font-bold text-sm hover:border-white hover:text-white transition">Github</a>
+                        <div class="flex gap-4 mt-auto">
+                            <a href="#" class="flex-1 text-center bg-primary hover:bg-red-600 text-white py-2.5 rounded-lg font-bold text-sm transition shadow-glow-sm hover:shadow-glow-md flex justify-center items-center gap-2">Live Demo <i class="fas fa-external-link-alt"></i></a>
+                            <a href="#" class="flex-1 text-center glass-box border border-primary/30 hover:border-primary text-gray-300 hover:text-primary py-2.5 rounded-lg font-bold text-sm transition flex justify-center items-center gap-2 group/btn"><i class="fab fa-github group-hover/btn:text-primary transition"></i> Source</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="bg-accent rounded-xl overflow-hidden shadow-lg border border-gray-800 transform hover:-translate-y-2 transition duration-300 relative">
-                    <div class="relative">
-                        <img src="https://via.placeholder.com/600x400/222222/FFFFFF?text=Discord+Bot" class="w-full h-48 object-cover">
-                        <div class="absolute top-0 left-0 bg-green-600 text-white text-xs font-bold px-3 py-2 rounded-br-lg z-10">
-                            COMPLETED
+                <div class="glass-box rounded-2xl overflow-hidden shadow-lg border border-primary/20 hover:border-primary/60 transform hover:-translate-y-3 transition-all duration-500 group relative h-full flex flex-col hover:shadow-glow-sm">
+                    <div class="relative h-56 overflow-hidden">
+                        <img src="https://via.placeholder.com/600x400/222222/FFFFFF?text=Discord+Bot" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-700">
+                        <div class="absolute inset-0 bg-gradient-to-t from-dark via-transparent to-transparent opacity-80"></div>
+                        <div class="absolute top-4 left-4 bg-green-600/90 text-white text-xs font-bold px-4 py-1.5 rounded-full shadow-md z-20 border border-green-400 flex items-center gap-2">
+                            <i class="fas fa-check-circle"></i> COMPLETED
                         </div>
                     </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-heading font-bold text-white mb-2">Guardian Bot</h3>
-                        <p class="text-gray-400 text-sm mb-4 line-clamp-3">
-                            Bot moderasi Discord canggih dengan fitur auto-moderation, music player, dan leveling system custom.
+                    <div class="p-7 flex flex-col flex-grow relative">
+                         <h3 class="text-2xl font-heading font-bold text-white mb-3 group-hover:text-primary transition drop-shadow-sm">Guardian Bot</h3>
+                         <p class="text-gray-400 text-sm mb-6 line-clamp-3 flex-grow leading-relaxed">
+                            Bot moderasi Discord canggih dengan fitur auto-moderation, music player berkualitas tinggi, dan leveling system yang dapat dikustomisasi penuh.
                         </p>
-                        <div class="flex flex-wrap gap-2 mb-6">
-                            <span class="px-2 py-1 bg-gray-800 text-xs rounded text-gray-300">Node.js</span>
-                            <span class="px-2 py-1 bg-gray-800 text-xs rounded text-gray-300">Discord.js</span>
+                         <div class="flex flex-wrap gap-2 mb-8">
+                            <span class="px-3 py-1 bg-dark/50 border border-blue-500/30 text-xs rounded-full text-blue-400 font-bold shadow-sm">Node.js</span>
+                            <span class="px-3 py-1 bg-dark/50 border border-white/10 text-xs rounded-full text-gray-300">Discord.js</span>
                         </div>
-                        <div class="flex gap-3">
-                            <a href="#" class="flex-1 text-center bg-gray-700 text-white py-2 rounded font-bold text-sm hover:bg-gray-600 transition">Invite</a>
-                            <a href="#" class="flex-1 text-center border border-gray-600 text-gray-300 py-2 rounded font-bold text-sm hover:border-white hover:text-white transition">Github</a>
+                         <div class="flex gap-4 mt-auto">
+                            <a href="#" class="flex-1 text-center bg-accent hover:bg-accent/80 text-white py-2.5 rounded-lg font-bold text-sm transition shadow-sm flex justify-center items-center gap-2">Invite Bot <i class="fas fa-robot"></i></a>
+                            <a href="#" class="flex-1 text-center glass-box border border-white/10 hover:border-white/40 text-gray-300 hover:text-white py-2.5 rounded-lg font-bold text-sm transition flex justify-center items-center gap-2"><i class="fab fa-github"></i> Source</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="bg-accent rounded-xl overflow-hidden shadow-lg border border-gray-800 transform hover:-translate-y-2 transition duration-300 relative">
-                    <div class="relative">
-                        <img src="https://via.placeholder.com/600x400/333333/FFFFFF?text=Web+Dashboard" class="w-full h-48 object-cover">
-                        <div class="absolute top-0 left-0 bg-yellow-600 text-white text-xs font-bold px-3 py-2 rounded-br-lg z-10">
-                            ON GOING
-                        </div>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-heading font-bold text-white mb-2">Admin Dashboard</h3>
-                        <p class="text-gray-400 text-sm mb-4 line-clamp-3">
-                            Dashboard manajemen stok barang dengan grafik analitik penjualan dan manajemen user role.
-                        </p>
-                        <div class="flex flex-wrap gap-2 mb-6">
-                            <span class="px-2 py-1 bg-gray-800 text-xs rounded text-gray-300">React</span>
-                            <span class="px-2 py-1 bg-gray-800 text-xs rounded text-gray-300">Tailwind</span>
-                        </div>
-                        <div class="flex gap-3">
-                            <a href="#" class="flex-1 text-center bg-gray-700 text-white py-2 rounded font-bold text-sm hover:bg-gray-600 transition">Demo</a>
-                            <a href="#" class="flex-1 text-center border border-gray-600 text-gray-300 py-2 rounded font-bold text-sm hover:border-white hover:text-white transition">Github</a>
-                        </div>
-                    </div>
                 </div>
-
-            </div>
         </div>
     </section>
 
-    <footer class="bg-black py-6 text-center border-t border-gray-900">
-        <p class="text-gray-600 text-sm">Copyright © 2023 <span class="text-white">MappleID</span>.</p>
+    <footer class="bg-black py-8 text-center border-t border-gray-900/80 relative z-10">
+        <p class="text-gray-500 text-sm">Copyright © 2023 <span class="text-white font-bold drop-shadow-[0_0_5px_rgba(255,255,255,0.5)]">MappleID</span>.</p>
     </footer>
 </body>
 </html>
