--- a/about.html
+++ b/about.html
@@ -3,143 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - JopehDeveloper</title>
+    <title>About Me | JopehDeveloper</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
-        tailwind.config = {
+         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
-                    colors: { primary: '#EF4444', dark: '#0f172a', card: '#1e293b' },
-                    fontFamily: { sans: ['Open Sans', 'sans-serif'], heading: ['Poppins', 'sans-serif'] }
+                    fontFamily: { sans: ['Open Sans', 'sans-serif'], heading: ['Poppins', 'sans-serif'] },
+                    colors: { brand: { DEFAULT: '#dc2626' } },
+                    boxShadow: { 'neon': '0 0 15px rgba(239, 68, 68, 0.5)' },
+                    animation: { 'fade-up': 'fadeUp 0.8s ease-out forwards' },
+                    keyframes: { fadeUp: { '0%': { opacity: '0', transform: 'translateY(20px)' }, '100%': { opacity: '1', transform: 'translateY(0)' } } }
                 }
             }
         }
     </script>
 </head>
-<body class="bg-dark text-gray-200 font-sans antialiased">
+<body class="bg-gray-900 text-gray-100 flex flex-col min-h-screen">
 
-    <nav class="fixed w-full z-50 top-0 bg-dark/90 backdrop-blur-md border-b border-gray-800">
-        <div class="max-w-7xl mx-auto px-4 h-20 flex items-center justify-between">
-            <a href="index.html" class="flex items-center gap-3 font-heading font-bold text-xl text-white">
-                <img class="h-10 w-10 rounded-full border-2 border-primary" src="https://via.placeholder.com/150" alt="Logo">
-                ImJopeh
-            </a>
-            <div class="hidden md:flex space-x-8">
-                <a href="index.html" class="text-gray-300 hover:text-primary transition font-medium">Home</a>
-                <a href="about.html" class="text-white font-medium">About</a>
-                <a href="portfolio.html" class="text-gray-300 hover:text-primary transition font-medium">Portfolio</a>
-            </div>
-        </div>
+    <nav class="w-full z-50 bg-gray-900 border-b border-gray-800 py-4 px-6 flex justify-between items-center sticky top-0">
+        <a href="index.html" class="flex items-center gap-2 text-white hover:text-brand transition font-heading font-bold">
+            <i class="fas fa-arrow-left"></i> Back to Home
+        </a>
+        <span class="font-heading font-bold text-xl tracking-wide text-brand">About Jopeh</span>
     </nav>
 
-    <main class="pt-32 pb-20 max-w-6xl mx-auto px-4">
+    <main class="container mx-auto px-6 py-12 flex-grow animate-fade-up">
         
-        <div class="flex flex-col md:flex-row gap-12 mb-20">
-            <div class="w-full md:w-1/3">
-                [attachment_0](attachment)
-                <img src="https://via.placeholder.com/400x500" alt="Profile" class="w-full rounded-xl shadow-2xl border-4 border-card transform hover:rotate-2 transition duration-300">
+        <div class="text-center mb-16">
+            <h1 class="text-4xl md:text-5xl font-heading font-bold mb-6">Who is <span class="text-brand">Jopeh?</span></h1>
+            <p class="text-gray-300 text-lg max-w-3xl mx-auto leading-relaxed bg-gray-800 p-6 rounded-xl border-l-4 border-brand shadow-lg">
+                Saya adalah pengembang yang berdedikasi dengan passion tinggi dalam menciptakan kode yang efisien dan visual yang memukau. Berpengalaman dalam membangun ekosistem digital dari website responsif hingga manajemen server game.
+            </p>
+        </div>
+
+        <div class="grid md:grid-cols-2 gap-12">
+            <div>
+                <h2 class="font-heading text-2xl font-bold text-white mb-6 border-b border-gray-700 pb-2">Personal Info</h2>
+                <ul class="space-y-4 text-gray-300">
+                    <li class="flex justify-between"><span class="font-bold text-white">Nama Panjang:</span> Jopeh Developer Official</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Umur:</span> 2x Tahun</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Bahasa:</span> Indonesia, English, Javanese</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Asal:</span> Indonesia, ID</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Alias:</span> ImJopeh / MappleAdmin</li>
+                </ul>
+
+                <h2 class="font-heading text-2xl font-bold text-white mt-10 mb-6 border-b border-gray-700 pb-2">Specializations</h2>
+                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                    <div class="bg-gray-800 p-4 rounded border border-gray-700 hover:border-brand transition group">
+                        <i class="fas fa-code text-brand text-2xl mb-2"></i>
+                        <h4 class="font-bold text-white">Front-End</h4>
+                        <p class="text-xs text-gray-400 mt-1">Crafting responsive & interactive UI.</p>
+                    </div>
+                    <div class="bg-gray-800 p-4 rounded border border-gray-700 hover:border-brand transition group">
+                        <i class="fas fa-server text-brand text-2xl mb-2"></i>
+                        <h4 class="font-bold text-white">Back-End</h4>
+                        <p class="text-xs text-gray-400 mt-1">NodeJS & REST API Logic.</p>
+                    </div>
+                    <div class="bg-gray-800 p-4 rounded border border-gray-700 hover:border-brand transition group">
+                        <i class="fas fa-cube text-brand text-2xl mb-2"></i>
+                        <h4 class="font-bold text-white">Minecraft Dev</h4>
+                        <p class="text-xs text-gray-400 mt-1">Plugin config & Server optimization.</p>
+                    </div>
+                    <div class="bg-gray-800 p-4 rounded border border-gray-700 hover:border-brand transition group">
+                        <i class="fas fa-robot text-brand text-2xl mb-2"></i>
+                        <h4 class="font-bold text-white">Discord Bot</h4>
+                        <p class="text-xs text-gray-400 mt-1">Automation & Moderation bots.</p>
+                    </div>
+                </div>
             </div>
-            <div class="w-full md:w-2/3">
-                <h1 class="font-heading text-4xl font-bold text-white mb-6">About <span class="text-primary">Me</span></h1>
-                <p class="text-gray-400 mb-8 text-lg leading-relaxed">
-                    Saya adalah pengembang web yang berdedikasi dengan hasrat untuk membangun solusi yang elegan dan efisien. Berpengalaman dalam menciptakan sistem yang kompleks namun user-friendly.
-                </p>
-                
-                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-8">
-                    <div class="bg-card p-4 rounded-lg border border-gray-700">
-                        <span class="text-primary font-bold block text-xs uppercase tracking-wider">Nama Panjang</span>
-                        <span class="text-white font-semibold">Jopeh Developer</span>
+
+            <div>
+                <h2 class="font-heading text-2xl font-bold text-white mb-6 border-b border-gray-700 pb-2">Programming Skills</h2>
+                <div class="space-y-6">
+                    <div>
+                        <div class="flex justify-between mb-1">
+                            <span class="text-base font-medium text-white">HTML5 & CSS3 (Tailwind)</span>
+                            <span class="text-sm font-medium text-brand">95%</span>
+                        </div>
+                        <div class="w-full bg-gray-700 rounded-full h-2.5">
+                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 95%"></div>
+                        </div>
                     </div>
-                    <div class="bg-card p-4 rounded-lg border border-gray-700">
-                        <span class="text-primary font-bold block text-xs uppercase tracking-wider">Umur</span>
-                        <span class="text-white font-semibold">2x Tahun</span>
+                    <div>
+                        <div class="flex justify-between mb-1">
+                            <span class="text-base font-medium text-white">JavaScript (ES6+)</span>
+                            <span class="text-sm font-medium text-brand">85%</span>
+                        </div>
+                        <div class="w-full bg-gray-700 rounded-full h-2.5">
+                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 85%"></div>
+                        </div>
                     </div>
-                    <div class="bg-card p-4 rounded-lg border border-gray-700">
-                        <span class="text-primary font-bold block text-xs uppercase tracking-wider">Asal</span>
-                        <span class="text-white font-semibold">Indonesia</span>
+                    <div>
+                        <div class="flex justify-between mb-1">
+                            <span class="text-base font-medium text-white">Node.js</span>
+                            <span class="text-sm font-medium text-brand">70%</span>
+                        </div>
+                        <div class="w-full bg-gray-700 rounded-full h-2.5">
+                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 70%"></div>
+                        </div>
                     </div>
-                    <div class="bg-card p-4 rounded-lg border border-gray-700">
-                        <span class="text-primary font-bold block text-xs uppercase tracking-wider">Nama Lain</span>
-                        <span class="text-white font-semibold">Mapple Admin</span>
+                    <div>
+                        <div class="flex justify-between mb-1">
+                            <span class="text-base font-medium text-white">Java (Minecraft)</span>
+                            <span class="text-sm font-medium text-brand">60%</span>
+                        </div>
+                        <div class="w-full bg-gray-700 rounded-full h-2.5">
+                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 60%"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="mb-20">
-            <h2 class="font-heading text-2xl font-bold text-white mb-8 border-l-4 border-primary pl-4">My Programming Skills</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div>
-                    <div class="flex justify-between mb-1">
-                        <span class="text-base font-medium text-white">HTML & CSS</span>
-                        <span class="text-sm font-medium text-primary">95%</span>
-                    </div>
-                    <div class="w-full bg-gray-700 rounded-full h-2.5">
-                        <div class="bg-primary h-2.5 rounded-full" style="width: 95%"></div>
-                    </div>
-                </div>
-                <div>
-                    <div class="flex justify-between mb-1">
-                        <span class="text-base font-medium text-white">JavaScript</span>
-                        <span class="text-sm font-medium text-primary">85%</span>
-                    </div>
-                    <div class="w-full bg-gray-700 rounded-full h-2.5">
-                        <div class="bg-primary h-2.5 rounded-full" style="width: 85%"></div>
-                    </div>
-                </div>
-                <div>
-                    <div class="flex justify-between mb-1">
-                        <span class="text-base font-medium text-white">Java (Minecraft)</span>
-                        <span class="text-sm font-medium text-primary">70%</span>
-                    </div>
-                    <div class="w-full bg-gray-700 rounded-full h-2.5">
-                        <div class="bg-primary h-2.5 rounded-full" style="width: 70%"></div>
-                    </div>
-                </div>
-                <div>
-                    <div class="flex justify-between mb-1">
-                        <span class="text-base font-medium text-white">NodeJS</span>
-                        <span class="text-sm font-medium text-primary">80%</span>
-                    </div>
-                    <div class="w-full bg-gray-700 rounded-full h-2.5">
-                        <div class="bg-primary h-2.5 rounded-full" style="width: 80%"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div>
-            <h2 class="font-heading text-2xl font-bold text-white mb-8 border-l-4 border-primary pl-4">Specialized Skills</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div class="bg-card p-6 rounded-xl border border-gray-800 hover:border-primary transition duration-300">
-                    <i class="fas fa-code text-3xl text-primary mb-4"></i>
-                    <h3 class="font-bold text-white text-lg mb-2">Front End Dev</h3>
-                    <p class="text-gray-400 text-sm">Membangun UI yang responsif dan interaktif menggunakan teknologi modern.</p>
-                </div>
-                <div class="bg-card p-6 rounded-xl border border-gray-800 hover:border-primary transition duration-300">
-                    <i class="fas fa-server text-3xl text-primary mb-4"></i>
-                    <h3 class="font-bold text-white text-lg mb-2">Back End Dev</h3>
-                    <p class="text-gray-400 text-sm">Mengelola database dan logika server untuk performa maksimal.</p>
-                </div>
-                <div class="bg-card p-6 rounded-xl border border-gray-800 hover:border-primary transition duration-300">
-                    <i class="fas fa-cubes text-3xl text-primary mb-4"></i>
-                    <h3 class="font-bold text-white text-lg mb-2">MC Server Dev</h3>
-                    <p class="text-gray-400 text-sm">Setup, konfigurasi plugin, dan optimasi server Minecraft.</p>
-                </div>
-                <div class="bg-card p-6 rounded-xl border border-gray-800 hover:border-primary transition duration-300">
-                    <i class="fas fa-robot text-3xl text-primary mb-4"></i>
-                    <h3 class="font-bold text-white text-lg mb-2">Bot Dev</h3>
-                    <p class="text-gray-400 text-sm">Pembuatan bot Discord canggih dengan interaksi otomatis.</p>
-                </div>
-            </div>
-        </div>
-
     </main>
 
-    <footer class="bg-black border-t border-gray-800 py-8 text-center text-gray-500 text-sm">
-        © 2023 MappleID. All rights reserved.
+    <footer class="bg-black py-6 mt-auto border-t border-gray-800 text-center">
+        <p class="text-gray-500 text-sm">&copy; 2025 MappleID. All Rights Reserved.</p>
     </footer>
-
 </body>
 </html>
