--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p class="text-gray-300 max-w-2xl mx-auto mb-8 text-lg leading-relaxed">
                 Saya adalah pengembang yang berdedikasi dengan passion tinggi dalam menciptakan kode yang efisien dan visual yang memukau. Berpengalaman dalam membangun ekosistem digital dari website responsif hingga manajemen server game.
             </p>
-            <a href="about.html" class="inline-block px-8 py-3 bg-transparent border border-gray-500 hover:border-brand hover:text-brand text-white font-heading rounded transition-all duration-300">
+            <a href="about" class="inline-block px-8 py-3 bg-transparent border border-gray-500 hover:border-brand hover:text-brand text-white font-heading rounded transition-all duration-300">
                 Read More About Me <i class="fas fa-arrow-right ml-2"></i>
             </a>
         </div>
