--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <body class="bg-gray-900 text-gray-100 flex flex-col min-h-screen">
 
     <nav class="w-full z-50 bg-gray-900 border-b border-gray-800 py-4 px-6 flex justify-between items-center sticky top-0">
-        <a href="index.html" class="flex items-center gap-2 text-white hover:text-brand transition font-heading font-bold">
+        <a href="/#about" class="flex items-center gap-2 text-white hover:text-brand transition font-heading font-bold">
             <i class="fas fa-arrow-left"></i> Back to Home
         </a>
         <span class="font-heading font-bold text-xl tracking-wide text-brand">About Jopeh</span>
