--- a/journey.html
+++ b/journey.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Journey | JopehDeveloper</title>
+    <title>My Journey | ImJopeh</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -26,7 +26,7 @@
 <body class="bg-gray-900 text-gray-100 flex flex-col min-h-screen">
 
     <nav class="w-full z-50 bg-gray-900 border-b border-gray-800 py-4 px-6 flex justify-between items-center sticky top-0 backdrop-blur-md bg-opacity-90">
-        <a href="index.html" class="flex items-center gap-2 text-white hover:text-brand transition font-heading font-bold">
+        <a href="/#journey" class="flex items-center gap-2 text-white hover:text-brand transition font-heading font-bold">
             <i class="fas fa-arrow-left"></i> Back to Home
         </a>
         <span class="font-heading font-bold text-xl tracking-wide text-brand">My Journey</span>
