--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <section id="journey" class="py-20 bg-gray-900 border-t border-gray-800">
         <div class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-10">
             
-            <div class="w-full md:w-1/2 reveal">
+            <div class="w-full md:w-1/2 reveal hidden md:block">
                 <div class="relative pl-6 border-l-2 border-brand space-y-8">
                     <div class="relative">
                         <span class="absolute -left-[31px] bg-gray-900 border-2 border-brand w-4 h-4 rounded-full"></span>
