--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
     <section id="about" class="py-20 bg-gray-800 relative">
         <div class="container mx-auto px-6 text-center">
-            <h2 class="font-heading text-3xl md:text-4xl font-bold text-white mb-6">About <span class="text-brand">Me</span></h2>
-            <p class="text-gray-300 max-w-2xl mx-auto mb-8 text-lg leading-relaxed">
+            <h2 class="font-heading text-3xl md:text-4xl font-bold text-white mb-6 reveal">About <span class="text-brand">Me</span></h2>
+            <p class="text-gray-300 max-w-2xl mx-auto mb-8 text-lg leading-relaxed reveal">
                 Saya adalah pengembang yang berdedikasi dengan passion tinggi dalam menciptakan kode yang efisien dan visual yang memukau. Berpengalaman dalam membangun ekosistem digital dari website responsif hingga manajemen server game.
             </p>
             <a href="about" class="inline-block px-8 py-3 bg-transparent border border-gray-500 hover:border-brand hover:text-brand text-white font-heading rounded transition-all duration-300">
@@ -172,11 +172,11 @@
     <section id="portfolio" class="py-20">
         <div class="container mx-auto px-6">
             <div class="text-center mb-12">
-                <h2 class="font-heading text-3xl md:text-4xl font-bold mb-4">Featured <span class="text-brand">Portfolio</span></h2>
-                <p class="text-gray-400">Sorotan proyek terbaik yang pernah saya kerjakan.</p>
+                <h2 class="font-heading text-3xl md:text-4xl font-bold mb-4 reveal">Featured <span class="text-brand">Portfolio</span></h2>
+                <p class="text-gray-400 reveal">Sorotan proyek terbaik yang pernah saya kerjakan.</p>
             </div>
 
-            <div class="max-w-4xl mx-auto relative group">
+            <div class="max-w-4xl mx-auto relative group reveal">
                 <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg border border-gray-700 hover:border-brand transition-all duration-300 hover:shadow-neon transform hover:-translate-y-2">
                     <div class="absolute top-4 left-4 bg-brand text-white text-xs font-bold px-3 py-1 rounded shadow-md z-10">
                         <i class="fas fa-thumbtack mr-1"></i> Projek Unggulan
@@ -212,7 +212,7 @@
             </div>
 
             <div class="text-center mt-12">
-                <a href="portfolio" class="inline-block text-brand font-bold hover:underline text-lg">
+                <a href="portfolio" class="inline-block text-brand font-bold hover:underline text-lg reveal">
                     View All Projects <i class="fas fa-angle-double-right ml-1"></i>
                 </a>
             </div>
@@ -223,7 +223,7 @@
         <div class="absolute top-0 right-0 w-64 h-64 bg-brand rounded-full mix-blend-overlay filter blur-[100px] opacity-20"></div>
         
         <div class="container mx-auto px-6">
-            <h2 class="font-heading text-3xl md:text-4xl font-bold text-center mb-16">Get In <span class="text-brand">Touch</span></h2>
+            <h2 class="reveal font-heading text-3xl md:text-4xl font-bold text-center mb-16">Get In <span class="text-brand">Touch</span></h2>
 
             <div class="grid md:grid-cols-2 gap-12">
                 <div class="space-y-6">
@@ -239,7 +239,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="flex items-center p-4 bg-gray-900 rounded-lg border border-gray-700 hover:border-brand hover:shadow-neon transition-all group">
+                    <a href="#" class="reveal flex items-center p-4 bg-gray-900 rounded-lg border border-gray-700 hover:border-brand hover:shadow-neon transition-all group">
                         <div class="w-12 h-12 bg-pink-600 rounded-full flex items-center justify-center text-white text-xl mr-4 group-hover:scale-110 transition-transform">
                             <i class="fab fa-instagram"></i>
                         </div>
@@ -249,7 +249,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="flex items-center p-4 bg-gray-900 rounded-lg border border-gray-700 hover:border-brand hover:shadow-neon transition-all group">
+                    <a href="#" class="reveal flex items-center p-4 bg-gray-900 rounded-lg border border-gray-700 hover:border-brand hover:shadow-neon transition-all group">
                         <div class="w-12 h-12 bg-red-600 rounded-full flex items-center justify-center text-white text-xl mr-4 group-hover:scale-110 transition-transform">
                             <i class="fab fa-youtube"></i>
                         </div>
@@ -261,7 +261,7 @@
                 </div>
 
                 <div class="bg-gray-900 p-8 rounded-xl border border-gray-700 relative">
-                    <form id="contactForm" class="space-y-4">
+                    <form id="contactForm" class="space-y-4 reveal">
                         <div>
                             <label class="block text-sm font-bold mb-2 text-gray-400">Username / Name</label>
                             <input type="text" id="name" class="w-full bg-gray-800 border border-gray-700 rounded p-3 text-white focus:border-brand focus:outline-none focus:shadow-neon transition-all" placeholder="Your Name" required>
