--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="ImJopeh | Home">
     <meta property="og:description" content="Welcome to my creative universe. Web, Bots, and Minecraft Development.">
-    <meta property="og:image" content="https://placehold.co/1200x630/1f2937/ef4444?text=JopehDev">
+    <meta property="og:image" content="assets/logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,7 +68,7 @@
     <nav class="fixed w-full z-50 glass-nav border-b border-gray-800 transition-all duration-300">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3 group">
-                <img src="https://placehold.co/50x50/ef4444/white?text=JD" alt="Jopeh Logo" class="w-10 h-10 rounded-full border-2 border-brand shadow-neon transition-transform group-hover:rotate-12">
+                <img src="assets/logo.png" alt="Jopeh Logo" class="w-10 h-10 rounded-full border-2 border-brand shadow-neon transition-transform group-hover:rotate-12">
                 <span class="font-heading font-bold text-xl tracking-wide text-white group-hover:text-brand transition-colors">ImJopeh</span>
             </a>
 
@@ -96,7 +96,7 @@
             
             <div class="w-full md:w-1/2 flex justify-center md:justify-start order-1 md:order-1 relative">
                 <div class="absolute inset-0 bg-brand blur-[100px] opacity-20 rounded-full"></div>
-                <img src="https://placehold.co/400x400/1f2937/ef4444?text=JopehDev+Logo" alt="JopehDeveloper Profile" 
+                <img src="assets/logo.png" alt="imjopeh Profile" 
                      class="relative z-10 w-64 h-64 md:w-96 md:h-96 object-cover rounded-full border-4 border-brand shadow-neon animate-pulse">
             </div>
 
