--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
             </div>
 
-            <div class="w-full md:w-1/2 text-left reveal">
+            <div class="w-full md:w-1/2 text-center reveal">
                 <h2 class="font-heading text-3xl md:text-4xl font-bold text-white mb-6">My <span class="text-brand">Journey</span></h2>
                 <p class="text-gray-300 mb-6 text-lg leading-relaxed">
                     Setiap skill yang saya miliki sekarang tidak datang dalam semalam. Ada cerita panjang tentang error, begadang, dan kepuasan saat kode berhasil berjalan. Dari sekedar main game hingga membuat server game sendiri.
@@ -286,11 +286,11 @@
     <footer class="bg-black py-10 mt-auto border-t border-gray-800">
         <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center">
             <div class="flex items-center gap-3 mb-4 md:mb-0">
-                <img src="https://placehold.co/40x40/ef4444/white?text=ID" class="w-8 h-8 rounded">
+                <img src="assets/logo-mapple.png" class="w-8 h-8 rounded">
                 <span class="font-heading font-bold text-xl text-white">MappleID</span>
             </div>
             <div class="text-gray-500 text-sm text-center md:text-right">
-                <p>&copy; 2023 - 2025 MappleID & JopehDeveloper. All Rights Reserved.</p>
+                <p>&copy; 2025 MappleID & ImJopeh. All Rights Reserved.</p>
                 <p class="mt-1">Designed professionally by ImJopeh.</p>
             </div>
         </div>
