--- a/journey.html
+++ b/journey.html
@@ -114,8 +114,8 @@
                                 <i class="fas fa-university text-xl"></i>
                             </div>
                             <div>
-                                <h4 class="font-bold text-lg text-white">Universitas Teknologi (Coming Soon)</h4>
-                                <span class="text-xs text-brand font-semibold">202X - Sekarang</span>
+                                <h4 class="font-bold text-lg text-white">SMK NEGERI 1 KOTA BEKASI</h4>
+                                <span class="text-xs text-brand font-semibold">2025</span>
                                 <p class="text-gray-400 text-xs mt-1">Teknik Informatika / Ilmu Komputer.</p>
                             </div>
                         </div>
@@ -125,8 +125,8 @@
                                 <i class="fas fa-school text-xl"></i>
                             </div>
                             <div>
-                                <h4 class="font-bold text-lg text-white">SMA Negeri 1 Kota</h4>
-                                <span class="text-xs text-gray-400 font-semibold">20XX - 20XX</span>
+                                <h4 class="font-bold text-lg text-white">SMP NEGERI 13 KOTA BEKASI</h4>
+                                <span class="text-xs text-gray-400 font-semibold">2025</span>
                                 <p class="text-gray-400 text-xs mt-1">Jurusan IPA. Aktif di ekstrakurikuler Komputer.</p>
                             </div>
                         </div>
@@ -136,8 +136,8 @@
                                 <i class="fas fa-child text-xl"></i>
                             </div>
                             <div>
-                                <h4 class="font-bold text-lg text-white">SD & SMP</h4>
-                                <span class="text-xs text-gray-400 font-semibold">20XX - 20XX</span>
+                                <h4 class="font-bold text-lg text-white">SD NEGERI PULOGEBANG 05</h4>
+                                <span class="text-xs text-gray-400 font-semibold">2023</span>
                                 <p class="text-gray-400 text-xs mt-1">Pendidikan dasar. Mulai mengenal internet dan game.</p>
                             </div>
                         </div>
