--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@
             <div>
                 <h2 class="font-heading text-2xl font-bold text-white mb-6 border-b border-gray-700 pb-2">Personal Info</h2>
                 <ul class="space-y-4 text-gray-300">
-                    <li class="flex justify-between"><span class="font-bold text-white">Nama Panjang:</span> Jopeh Developer Official</li>
-                    <li class="flex justify-between"><span class="font-bold text-white">Umur:</span> 2x Tahun</li>
-                    <li class="flex justify-between"><span class="font-bold text-white">Bahasa:</span> Indonesia, English, Javanese</li>
-                    <li class="flex justify-between"><span class="font-bold text-white">Asal:</span> Indonesia, ID</li>
-                    <li class="flex justify-between"><span class="font-bold text-white">Alias:</span> ImJopeh / MappleAdmin</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Realname:</span> Arjuna Jovian</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Umur:</span> 15 Tahun</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Bahasa:</span> Indonesia, English</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Asal:</span> Jawa Barat, Indonesia</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Alias:</span> ImJopeh / Arjozfy</li>
                 </ul>
 
                 <h2 class="font-heading text-2xl font-bold text-white mt-10 mb-6 border-b border-gray-700 pb-2">Specializations</h2>
@@ -82,19 +82,19 @@
                     <div>
                         <div class="flex justify-between mb-1">
                             <span class="text-base font-medium text-white">HTML5 & CSS3 (Tailwind)</span>
-                            <span class="text-sm font-medium text-brand">95%</span>
+                            <span class="text-sm font-medium text-brand">93%</span>
                         </div>
                         <div class="w-full bg-gray-700 rounded-full h-2.5">
-                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 95%"></div>
+                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 93%"></div>
                         </div>
                     </div>
                     <div>
                         <div class="flex justify-between mb-1">
                             <span class="text-base font-medium text-white">JavaScript (ES6+)</span>
-                            <span class="text-sm font-medium text-brand">85%</span>
+                            <span class="text-sm font-medium text-brand">80%</span>
                         </div>
                         <div class="w-full bg-gray-700 rounded-full h-2.5">
-                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 85%"></div>
+                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 80%"></div>
                         </div>
                     </div>
                     <div>
@@ -108,11 +108,11 @@
                     </div>
                     <div>
                         <div class="flex justify-between mb-1">
-                            <span class="text-base font-medium text-white">Java (Minecraft)</span>
-                            <span class="text-sm font-medium text-brand">60%</span>
+                            <span class="text-base font-medium text-white">Java</span>
+                            <span class="text-sm font-medium text-brand">35%</span>
                         </div>
                         <div class="w-full bg-gray-700 rounded-full h-2.5">
-                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 60%"></div>
+                            <div class="bg-brand h-2.5 rounded-full shadow-neon" style="width: 35%"></div>
                         </div>
                     </div>
                 </div>
