--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 <h2 class="font-heading text-2xl font-bold text-white mb-6 border-b border-gray-700 pb-2">Personal Info</h2>
                 <ul class="space-y-4 text-gray-300">
                     <li class="flex justify-between"><span class="font-bold text-white">Realname:</span> Arjuna Jovian</li>
-                    <li class="flex justify-between"><span class="font-bold text-white">Umur:</span> 15 Tahun</li>
+                    <li class="flex justify-between"><span class="font-bold text-white">Umur:</span> - Tahun</li>
                     <li class="flex justify-between"><span class="font-bold text-white">Bahasa:</span> Indonesia, English</li>
                     <li class="flex justify-between"><span class="font-bold text-white">Asal:</span> Jawa Barat, Indonesia</li>
                     <li class="flex justify-between"><span class="font-bold text-white">Alias:</span> ImJopeh / Arjozfy</li>
