--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
         }
     </script>
     <style>
-        /* Custom scrollbar for professional look */
         ::-webkit-scrollbar { width: 8px; }
         ::-webkit-scrollbar-track { background: #111827; }
         ::-webkit-scrollbar-thumb { background: #ef4444; border-radius: 4px; }
@@ -98,7 +97,7 @@
     </nav>
 
     <section id="hero" class="min-h-screen flex items-center pt-20 md:pt-0 animate-fade-up">
-        <div class="container mx-auto px-6 flex flex-col md:flex-row items-center justify-between gap-10">
+        <div class="container mx-auto px-6 flex flex-col md:flex-row items-center justify-between gap-6">
             
             <div class="w-full md:w-1/2 flex justify-center md:justify-start order-1 md:order-1 relative">
                 <div class="absolute inset-0 bg-brand blur-[100px] opacity-20 rounded-full"></div>
@@ -146,12 +145,12 @@
                     <div class="relative">
                         <span class="absolute -left-[31px] bg-gray-900 border-2 border-brand w-4 h-4 rounded-full"></span>
                         <h4 class="text-white font-bold">Today</h4>
-                        <p class="text-gray-500 text-sm">Professional Web Dev</p>
+                        <p class="text-gray-500 text-sm">Web Developer</p>
                     </div>
                     <div class="relative">
                         <span class="absolute -left-[31px] bg-gray-900 border-2 border-gray-600 w-4 h-4 rounded-full"></span>
                         <h4 class="text-gray-400 font-bold">2023</h4>
-                        <p class="text-gray-500 text-sm">Hello World!</p>
+                        <p class="text-gray-500 text-sm">Developing Minecraft Server</p>
                     </div>
                     <div class="relative">
                         <span class="absolute -left-[31px] bg-gray-900 border-2 border-gray-600 w-4 h-4 rounded-full"></span>
